/*
 * $Id: ChangeLog,v 1.1971 2003/12/31 00:28:25 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-31 08:00 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  + source/rtl/gtxvt/gtxvt.h
    + Now the virtual buffer of gtxvt is unicode. It's slower, as
      many transformations are required, but is fast enough.
    + Added support for DOS semigraphic characters. Fillers (full
      and partial squares), single and double border boxes are
      now drawn in the terminal INDEPENDENTLY from the underlying
      font (they are drawn "manually" via draw functions).
      (mixed style semigraphic characters are still missing though).


2003-12-30 22:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  + contrib\firebird\firebird.c
  + contrib\firebird\tfirebird.prg
  + contrib\firebird\README
  + contrib\firebird\make_b32.bat
  + contrib\firebird\Makefile
  + contrib\firebird\makefile.bc
  + contrib\firebird\tests\Makefile
  + contrib\firebird\tests\stress.prg
  + contrib\firebird\tests\simple.prg
  + contrib\firebird\tests\test.prg
  + contrib\firebird\tests\testapi.c
  + contrib\firebird\tests\README
    + Xharbour  functions and classes for Firebird Acess Provided by Rodrigo Moreno


2003-12-29 11:41 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_gnu.bat
  * xharbour/make_gnu.cmd
  * xharbour/make_gnu.sh
  * xharbour/bin/!pack_src.bat
  * xharbour/bin/hb-func.sh
  * xharbour/bin/pack_src.sh
    + gtxvt support added

2003-12-31 11:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
   + Handle K_ALT_1 - 0, K_ALT_A - Z  for all Keyboard mappings

2003-12-31 09:37 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwvt/gtwvt.c
   + removed redundant static BOOL lMouseDown, rMouseDown