@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1971 2003/12/31 00:28:25 lculik Exp $
+ * $Id: ChangeLog,v 1.1972 2003/12/31 06:59:58 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-31 11:50 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/rtl/gtxvt/gtxvt.c
+    + Added dynamic resizing of the VT while running.
+    ! Added Window Manager Hints: this helps window managers to resize correctly
+      the console; i.e. the console is now resized at discrete multiples of
+      font width/height.
 
 2003-12-31 08:00 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/rtl/gtxvt/gtxvt.c
